add impl and fix tests